--- a/volumes/04-efs-static.yaml
+++ b/volumes/04-efs-static.yaml
@@ -37,7 +37,7 @@ spec:
   containers:
   - name: nginx
     image: nginx
-    volumeMounts: # docker run -v hostpath:containerpath
+    volumeMounts: # docker run -v hostpath:contaierpath
     - name: expense-efs
       mountPath: /usr/share/nginx/html
   volumes:
@@ -58,4 +58,4 @@ spec:
     protocol: TCP
     port: 80 # service port
     targetPort: 80 # container port
-    nodePort: 30007          
+    nodePort: 30007        
